[package]
name = "oxi"
version = "1.0.0"
authors = ["Elliot Jackson <elliot@elliotekj.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
env_logger = "0.7.1"
log = "0.4.8"
serde = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"
